# ManglingImgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ManglingImgui/: ManglingImgui.sln
ManglingImgui/ManglingImgui/: ManglingImgui.csproj  imgui.cs  imgui_impl_dx11.cs  imgui_impl_win32.cs
ManglingImgui/ManglingImgui/imgui/: constants.cs
ManglingImgui/ManglingImgui/imgui/enums/: ImDrawCornerFlags_.cs  ImDrawListFlags_.cs  ImFontAtlasFlags_.cs  ImGuiBackendFlags_.cs  ImGuiCol_.cs  ImGuiColorEditFlags_.cs  ImGuiComboFlags_.cs  ImGuiCond_.cs  ImGuiConfigFlags_.cs  ImGuiDataType_.cs  ImGuiDir_.cs  ImGuiDockNodeFlags_.cs  ImGuiDragDropFlags_.cs  ImGuiFocusedFlags_.cs  ImGuiHoveredFlags_.cs  ImGuiInputTextFlags_.cs  ImGuiKeyModFlags_.cs  ImGuiKey_.cs  ImGuiMouseButton_.cs  ImGuiMouseCursor_.cs  ImGuiNavInput_.cs  ImGuiPopupFlags_.cs  ImGuiSelectableFlags_.cs  ImGuiStyleVar_.cs  ImGuiTabBarFlags_.cs  ImGuiTabItemFlags_.cs  ImGuiTreeNodeFlags_.cs  ImGuiViewportFlags_.cs  ImGuiWindowFlags_.cs
ManglingImgui/ManglingImgui/imgui/structs/: ImDrawCmd.cs  ImDrawData.cs  ImDrawList.cs  ImDrawListSharedData.cs  ImDrawListSplitter.cs  ImDrawVert.cs  ImFont.cs  ImFontAtlas.cs  ImFontAtlasCustomRect.cs  ImFontConfig.cs  ImFontGlyph.cs  ImFontGlyphRangesBuilder.cs  ImGuiContext.cs  ImGuiIO.cs  ImGuiInputTextCallbackData.cs  ImGuiPayload.cs  ImGuiPlatformIO.cs  ImGuiSizeCallbackData.cs  ImGuiStorage.cs  ImGuiStyle.cs  ImGuiViewport.cs  ImGuiWindowClass.cs  ImVec2.cs  ImVec4.cs
ManglingImgui/ManglingImgui/imgui_impl_dx11/structs/: ID3D11Device.cs  ID3D11DeviceContext.cs
ManglingImgui/example_win32_directx11/: Program.cs  example_win32_directx11.csproj
dll/: CMakeLists.txt  userconfig.h
